chore: add versioned api v1 route #30
